Ongoing tweaks to X1

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,6 +28,8 @@ bind C send-keys -R \; clear-history
 bind-key -n C-k send-keys -R \; clear-history
 
 # Use C-1 - C-9 to jump between windows
+# TODO This doesn't work, annoyingly, haven't been able to find a solution.
+# But see https://unix.stackexchange.com/questions/158278/tmux-how-do-i-bind-to-c-control-minus#158298
 bind-key -n C-1 select-window -t 1
 bind-key -n C-2 select-window -t 2
 bind-key -n C-3 select-window -t 3
