--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,22 +23,23 @@ bind / split-window -h
 bind - split-window
 bind k delete-buffer
 
+bind-key -n Q kill-session
+
 # Clear screen and clear scrollback history
 bind C send-keys -R \; clear-history
 bind-key -n C-k send-keys -R \; clear-history
 
-# Use C-1 - C-9 to jump between windows
-# TODO This doesn't work, annoyingly, haven't been able to find a solution.
-# But see https://unix.stackexchange.com/questions/158278/tmux-how-do-i-bind-to-c-control-minus#158298
-bind-key -n C-1 select-window -t 1
-bind-key -n C-2 select-window -t 2
-bind-key -n C-3 select-window -t 3
-bind-key -n C-4 select-window -t 4
-bind-key -n C-5 select-window -t 5
-bind-key -n C-6 select-window -t 6
-bind-key -n C-7 select-window -t 7
-bind-key -n C-8 select-window -t 8
-bind-key -n C-9 select-window -t 9
+# Use M-1 - M-9 to jump between windows (alt keys)
+# Would have used control+number but tmux won't recognize it because https://unix.stackexchange.com/questions/102170/how-can-i-bind-ctrl-alt-0-9-in-tmux
+bind-key -n M-1 select-window -t 1
+bind-key -n M-2 select-window -t 2
+bind-key -n M-3 select-window -t 3
+bind-key -n M-4 select-window -t 4
+bind-key -n M-5 select-window -t 5
+bind-key -n M-6 select-window -t 6
+bind-key -n M-7 select-window -t 7
+bind-key -n M-8 select-window -t 8
+bind-key -n M-9 select-window -t 9
 
 # List of plugins
 # https://github.com/tmux-plugins/tpm
